changes after meeting

--- a/index.html
+++ b/index.html
@@ -100,8 +100,8 @@
 							<!-- Contact -->
 							<ul class="top-link">
 								<li><a href="#">About</a></li>
-								<li><a href="#">Products</a></li>
-								<li><a href="#">Contact</a></li>
+								<li><a href="#products">Products</a></li>
+								<li><a href="#contact">Contact</a></li>
 								<li><a href="#">FAQ</a></li>
 							</ul>
 							<!-- End Contact -->
@@ -109,7 +109,7 @@
 						<div class="col-lg-6 col-md-7 col-12">
 							<!-- Top Contact -->
 							<ul class="top-contact">
-								<li><i class="fa fa-phone"></i>+880 1234 56789</li>
+								<li><i class="fa fa-phone"></i>+91 98255 74075</li>
 								<li><i class="fa fa-envelope"></i><a href="mailto:support@yourmail.com">  paridhi.amul@gmail.com</a></li>
 							</ul>
 							<!-- End Top Contact -->
@@ -380,7 +380,7 @@
 						<div class="single-fun">
 							<i class="icofont icofont-user-alt-3"></i>
 							<div class="content">
-								<span class="counter">250</span>
+								<span class="counter">250</span> 
 								<p>Top Healthcare Brands Stocked</p>
 							</div>
 						</div>
@@ -391,8 +391,8 @@
 						<div class="single-fun">
 							<i class="icofont-simple-smile"></i>
 							<div class="content">
-								<span class="counter">5000</span>
-								<p>Orders Delivered</p>
+								<span class="counter">5000</span> 
+								<p>Orders <br>Delivered</p>
 							</div>
 						</div>
 						<!-- End Single Fun -->
@@ -403,7 +403,7 @@
 							<i class="icofont icofont-table"></i>
 							<div class="content">
 								<span class="counter">30 </span>
-								<p>Years of Experience</p>
+								<p>Years of <br>Experience</p>
 							</div>
 						</div>
 						<!-- End Single Fun -->
@@ -435,16 +435,16 @@
 							<div class="row">
 								<div class="col-lg-6">
 									<ul class="list">
-										<li><i class="fa fa-caret-right"></i>Trusted Brands, Lasting Care</li>
-										<li><i class="fa fa-caret-right"></i>Excellence in Healthcare</li>
-										<li><i class="fa fa-caret-right"></i>Quality You Can Trust</li>
+										<li><i class="fa fa-caret-right"></i>Proven Brands, Reliable Delivery</li>
+										<li><i class="fa fa-caret-right"></i>Innovation in Healthcare</li>
+										<li><i class="fa fa-caret-right"></i>Assured Quality, Every Time</li>
 									</ul>
 								</div>
 								<div class="col-lg-6">
 									<ul class="list">
-										<li><i class="fa fa-caret-right"></i>Leading Care, Trusted Brands </li>
-										<li><i class="fa fa-caret-right"></i>Leading Brands, Trusted Care</li>
-										<li><i class="fa fa-caret-right"></i>Top Brands, Trusted Care</li>
+										<li><i class="fa fa-caret-right"></i>Expertise Backed, Service Driven</li>
+										<li><i class="fa fa-caret-right"></i>Leading Medical Solutions</li>
+										<li><i class="fa fa-caret-right"></i>Top Picks, Clinical Precision</li>
 									</ul>
 								</div>
 							</div>
@@ -454,18 +454,7 @@
 					<div class="col-lg-6 col-12">
 						<!-- Start Choose Rights -->
 						<div class="choose-right">
-							<div class="video-image">
-								<!-- Video Animation -->
-								<div class="promo-video">
-									<div class="waves-block">
-										<div class="waves wave-1"></div>
-										<div class="waves wave-2"></div>
-										<div class="waves wave-3"></div>
-									</div>
-								</div>
-								<!--/ End Video Animation -->
-								<a href="https://www.youtube.com/watch?v=RFVXy6CRVR4" class="video video-popup mfp-iframe"><i class="fa fa-play"></i></a>
-							</div>
+						ß
 						</div>
 						<!-- End Choose Rights -->
 					</div>
@@ -480,7 +469,7 @@
 				<div class="row">
 					<div class="col-lg-12 col-md-12 col-12">
 						<div class="content">
-							<h2>Need Urgent Medical Supplies? Call @ 1234 56789</h2>
+							<h2>Need Urgent Medical Supplies? Call @ 98255 74075</h2>
 							<p>Get quick support for emergency hospital consumables, diagnostic products, and critical care supplies. We ensure fast response and timely delivery to your doorstep.						</p>
 							<div class="button">
 								<a href="#contact" class="btn">Contact Now</a>
@@ -733,31 +722,83 @@
 		<!-- End Appointment -->
 		
 		<!-- Start Newsletter Area -->
-		<section class="newsletter section">
-			<div class="container">
-				<div class="row ">
-					<div class="col-lg-6  col-12">
-						<!-- Start Newsletter Form -->
-						<div class="subscribe-text ">
-							<h6>Sign up for newsletter</h6>
-							<p class="">Stay connected with Paridhi Agencies—reach out for product inquiries, support or partnership opportunities anytime.</p>
-						</div>
-						<!-- End Newsletter Form -->
-					</div>
-					<div class="col-lg-6  col-12">
-						<!-- Start Newsletter Form -->
-						<div class="subscribe-form ">
-							<form action="thankyou.html" method="get" target="_blank" class="newsletter-inner">
-								<input name="EMAIL" placeholder="Your email address" class="common-input" onfocus="this.placeholder = ''"
-									onblur="this.placeholder = 'Your email address'" required="" type="email">
-								<button class="btn">Subscribe</button>
-							</form>
-						</div>
-						<!-- End Newsletter Form -->
+	<!-- Start Thank You Section (Final Version) -->
+<section class="newsletter section" style="text-align: center; background: #f9f9f9;">
+	<div class="container">
+		<div class="row justify-content-center">
+			<div class="col-lg-8 col-12">
+				<div class="subscribe-text">
+					<h2 class="ty-heading">Thank You 🙏</h2>
+					<p class="ty-subtext">
+						We truly appreciate your interest in <strong>Paridhi Agencies</strong>. Your trust drives us to deliver quality healthcare solutions every day.
+					</p>
+
+					<div class="ty-button-group">
+						<a href="index.html" class="ty-btn-outline">Back to Home</a>
+						<a href="products.html" class="ty-btn-filled">Explore Products</a>
 					</div>
 				</div>
 			</div>
-		</section>
+		</div>
+	</div>
+
+	<style>
+		.ty-heading {
+			font-size: 2.5rem;
+			font-weight: bold;
+			color: #1a76d1;
+			margin-bottom: 15px;
+		}
+
+		.ty-subtext {
+			font-size: 1.1rem;
+			color: #333;
+			margin-bottom: 30px;
+		}
+
+		.ty-button-group {
+			margin-top: 10px;
+		}
+
+		/* Button: White with blue outline (Back to Home) */
+		.ty-btn-outline {
+			background-color: #fff;
+			color: #1a76d1;
+			padding: 10px 20px;
+			border: 2px solid #1a76d1;
+			border-radius: 6px;
+			text-decoration: none;
+			font-weight: 500;
+			transition: all 0.3s ease;
+			margin: 5px;
+			display: inline-block;
+		}
+		.ty-btn-outline:hover {
+			background-color: #1a76d1;
+			color: #fff;
+		}
+
+		/* Button: Filled (Explore Products) */
+		.ty-btn-filled {
+			background-color: #1a76d1;
+			color: #fff;
+			padding: 10px 20px;
+			border: 2px solid #1a76d1;
+			border-radius: 6px;
+			text-decoration: none;
+			font-weight: 500;
+			transition: all 0.3s ease;
+			margin: 5px;
+			display: inline-block;
+		}
+		.ty-btn-filled:hover {
+			background-color: #155fa0;
+			border-color: #155fa0;
+		}
+	</style>
+</section>
+<!-- End Thank You Section -->
+
 		<!-- /End Newsletter Area -->
 		
 		<!-- Footer Area -->
