added prouct text

--- a/index.html
+++ b/index.html
@@ -573,7 +573,8 @@
 						<div class="section-title">
 							<h2>Our Producs </h2>
 							<img src="img/section-img.png" alt="#">
-							<p>Lorem ipsum dolor sit amet consectetur adipiscing elit praesent aliquet. pretiumts</p>
+							<p>At Paridhi Agencies, we offer a comprehensive range of medical and surgical supplies including disposable gloves, syringes, diagnostic equipment, hospital furniture, surgical instruments,
+								 and rehabilitation products. Every product reflects our commitment to quality, safety, and trusted healthcare solutions.</p>
 						</div>
 					</div>
 				</div>
