removed dropdown from products

--- a/index.html
+++ b/index.html
@@ -145,8 +145,10 @@
 											</li>
 											<li><a href="#about">Why Choose Us </a></li>
 									
-											<li><a href="#products">Our Products <i class="icofont-rounded-down"></i></a>
-												<ul class="dropdown">
+											<li><a href="#products">Our Products 
+												<!-- <i class="icofont-rounded-down"></i> -->
+											</a>
+												<!-- <ul class="dropdown">
 													<li><a href="#">Disposable Medical Supplies
 													</a></li>
 													<li><a href="#">Hospital Furniture
@@ -157,7 +159,7 @@
 													</a></li>
 													<li><a href="#">Rehabilitation Products
 													</a></li>
-												</ul>
+												</ul> -->
 											</li>
 											<li><a href="#services">Our Services </a></li>
 											<!-- <li><a href="#">Blogs <i class="icofont-rounded-down"></i></a>
