--- a/index.html
+++ b/index.html
@@ -138,7 +138,9 @@
 								<div class="main-menu">
 									<nav class="navigation">
 										<ul class="nav menu">
-											<li class="active"><a href="#">Home <i class="icofont-rounded-down"></i></a>
+											<li class="active"><a href="#">Home 
+												<!-- <i class="icofont-rounded-down"></i> -->
+											</a>
 												<ul class="dropdown">
 													<li><a href="index.html">Home</a></li>
 												</ul>
