--- a/index.html
+++ b/index.html
@@ -645,7 +645,7 @@
 				<div class="row">
 					<div class="col-lg-12">
 						<div class="section-title">
-							<h2>We’re Your Trusted Healthcare Supply Partner. Reach Out Anytime</h2>
+							<h2>We're Your Trusted Healthcare Supply Partner. Reach Out Anytime</h2>
 							<img src="img/section-img.png" alt="#">
 							<p>Supplying hospitals and clinics with certified medical products and reliable service support</p>
 						</div>
@@ -655,49 +655,53 @@
 				<div class="row">
 					<!-- Contact Form -->
 					<div class="col-lg-6 col-md-12 col-12">
-						<form class="form" action="thankyou.html" method="get">
-						  <div class="row">
-							<div class="col-lg-6 col-md-6 col-12">
-							  <div class="form-group">
-								<input name="name" type="text" placeholder="Name">
-							  </div>
-							</div>
-							<div class="col-lg-6 col-md-6 col-12">
-							  <div class="form-group">
-								<input name="email" type="email" placeholder="Email">
-							  </div>
-							</div>
-							<div class="col-lg-6 col-md-6 col-12">
-							  <div class="form-group">
-								<input name="phone" type="text" placeholder="Phone">
-							  </div>
-							</div>
-							<div class="col-lg-6 col-md-6 col-12">
-							  <div class="form-group">
-								<!-- Added name="date" here -->
-								<input name="date" type="text" placeholder="Date" id="datepicker">
-							  </div>
-							</div>
-							<div class="col-lg-12 col-md-12 col-12">
-							  <div class="form-group">
-								<textarea name="message" placeholder="Write Your Message Here....."></textarea>
-							  </div>
-							</div>
-						  </div>
-						  <div class="row">
-							<div class="col-lg-5 col-md-4 col-12">
-							  <div class="form-group">
-								<div class="button">
-								  <button   class="btn"><a href="thankyou.html">Send Message </a></button>
-								</div>
-							  </div>
-							</div>
-							<div class="col-lg-7 col-md-8 col-12">
-							  <p>( We will confirm via text message )</p>
-							</div>
-						  </div>
-						</form>
-					  </div>
+  <form class="form" action="https://formsubmit.co/hotingabu@gmail.com" method="POST">
+    <input type="hidden" name="_captcha" value="false">
+    <input type="hidden" name="_next" value="thankyou.html">
+
+    <div class="row">
+      <div class="col-lg-6 col-md-6 col-12">
+        <div class="form-group">
+          <input name="name" type="text" placeholder="Name" required>
+        </div>
+      </div>
+      <div class="col-lg-6 col-md-6 col-12">
+        <div class="form-group">
+          <input name="email" type="email" placeholder="Email" required>
+        </div>
+      </div>
+      <div class="col-lg-6 col-md-6 col-12">
+        <div class="form-group">
+          <input name="phone" type="text" placeholder="Phone" required>
+        </div>
+      </div>
+      <div class="col-lg-6 col-md-6 col-12">
+        <div class="form-group">
+          <input name="date" type="text" placeholder="Date" id="datepicker" required>
+        </div>
+      </div>
+      <div class="col-lg-12 col-md-12 col-12">
+        <div class="form-group">
+          <textarea name="message" placeholder="Write Your Message Here....." required></textarea>
+        </div>
+      </div>
+    </div>
+
+    <div class="row">
+      <div class="col-lg-5 col-md-4 col-12">
+        <div class="form-group">
+          <div class="button">
+            <button class="btn" type="submit">Send Message</button>
+          </div>
+        </div>
+      </div>
+      <div class="col-lg-7 col-md-8 col-12">
+        <p>( We will confirm via text message )</p>
+      </div>
+    </div>
+  </form>
+</div>
+
 		
 					<!-- Contact Info and Map -->
 					<div class="col-lg-6 col-md-12 col-12">
