--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 		
 		<!-- Title -->
-        <title>Paridhi Agencies | Leading Supplier & Stockist of Surgical Instruments, Medical Equipment & Healthcare Products in India.</title>
+        <title>The Paridhi Agencies | Leading Supplier & Stockist of Surgical Instruments, Medical Equipment & Healthcare Products in India.</title>
 		
 		<!-- Favicon -->
         <link rel="icon" href="img/favicon copy.ico" type="image/png">
