added a plus sign in testing mode

--- a/index.html
+++ b/index.html
@@ -394,9 +394,11 @@
 						<!-- Start Single Fun -->
 						<div class="single-fun">
 							<i class="icofont-simple-smile"></i>
-							<div class="content">
-								<span class="counter">5000</span> 
-								<p>Orders <br>Delivered</p>
+							<div class="content" >
+								<div style="display: inline-flex; align-items: baseline; gap: 2px;">
+									<span class="counter">5000</span><span>+</span>
+								</div>
+								<p>Orders Delivered</p>
 							</div>
 						</div>
 						<!-- End Single Fun -->
@@ -655,51 +657,51 @@
 				<div class="row">
 					<!-- Contact Form -->
 					<div class="col-lg-6 col-md-12 col-12">
-  <form class="form" action="https://formsubmit.co/hotingabu@gmail.com" method="POST">
-    <input type="hidden" name="_captcha" value="false">
-    <input type="hidden" name="_next" value="thankyou.html">
-    <div class="row">
-      <div class="col-lg-6 col-md-6 col-12">
-        <div class="form-group">
-          <input name="name" type="text" placeholder="Name" required>
-        </div>
-      </div>
-      <div class="col-lg-6 col-md-6 col-12">
-        <div class="form-group">
-          <input name="email" type="email" placeholder="Email" required>
-        </div>
-      </div>
-      <div class="col-lg-6 col-md-6 col-12">
-        <div class="form-group">
-          <input name="phone" type="text" placeholder="Phone" required>
-        </div>
-      </div>
-      <div class="col-lg-6 col-md-6 col-12">
-        <div class="form-group">
-          <input name="date" type="text" placeholder="Date" id="datepicker" required>
-        </div>
-      </div>
-      <div class="col-lg-12 col-md-12 col-12">
-        <div class="form-group">
-          <textarea name="message" placeholder="Write Your Message Here....." required></textarea>
-        </div>
-      </div>
-    </div>
-
-    <div class="row">
-      <div class="col-lg-5 col-md-4 col-12">
-        <div class="form-group">
-          <div class="button">
-            <button class="btn" type="submit">Send Message</button>
-          </div>
-        </div>
-      </div>
-      <div class="col-lg-7 col-md-8 col-12">
-        <p>( We will confirm via text message )</p>
-      </div>
-    </div>
-  </form>
-</div>
+						<form class="form" action="https://formsubmit.co/hotingabu@gmail.com" method="POST">
+							<input type="hidden" name="_captcha" value="false">
+							<input type="hidden" name="_next" value="thankyou.html">
+							<div class="row">
+								<div class="col-lg-6 col-md-6 col-12">
+									<div class="form-group">
+										<input name="name" type="text" placeholder="Name" required>
+									</div>
+								</div>
+								<div class="col-lg-6 col-md-6 col-12">
+									<div class="form-group">
+										<input name="email" type="email" placeholder="Email" required>
+									</div>
+								</div>
+								<div class="col-lg-6 col-md-6 col-12">
+									<div class="form-group">
+										<input name="phone" type="text" placeholder="Phone" required>
+									</div>
+								</div>
+								<div class="col-lg-6 col-md-6 col-12">
+									<div class="form-group">
+										<input name="date" type="text" placeholder="Date" id="datepicker" required>
+									</div>
+								</div>
+								<div class="col-lg-12 col-md-12 col-12">
+									<div class="form-group">
+										<textarea name="message" placeholder="Write Your Message Here....." required></textarea>
+									</div>
+								</div>
+							</div>
+					
+							<div class="row">
+								<div class="col-lg-5 col-md-4 col-12">
+									<div class="form-group">
+										<div class="button">
+											<button class="btn" type="submit">Send Message</button>
+										</div>
+									</div>
+								</div>
+								<div class="col-lg-7 col-md-8 col-12">
+									<p>( We will confirm via text message )</p>
+								</div>
+							</div>
+						</form>
+					</div>
 
 		
 					<!-- Contact Info and Map -->
