testing the plus icon

--- a/index.html
+++ b/index.html
@@ -398,7 +398,7 @@
 								<div style="display: inline-flex; align-items: baseline; gap: 2px;">
 									<span class="counter">5000</span><span>+</span>
 								</div>
-								<p>Orders Delivered</p>
+								<p>Orders </p><p>Delivered</p>
 							</div>
 						</div>
 						<!-- End Single Fun -->
