--- a/index.html
+++ b/index.html
@@ -872,11 +872,14 @@
 							<div class="single-footer">
 								<h2>Newsletter</h2>
 								<p>Stay connected with Paridhi Agencies—reach out for product inquiries, support or partnership opportunities anytime.</p>
-								<form action="mail/mail.php" method="get" target="_blank" class="newsletter-inner">
-									<input name="email" placeholder="Email Address" class="common-input" onfocus="this.placeholder = ''"
-										onblur="this.placeholder = 'Your email address'" required="" type="email">
-									<button class="button"><i class="icofont icofont-paper-plane"></i></button>
+								<form action="thankyou.html" method="get" class="newsletter-inner">
+									<input name="email" placeholder="Your email address" class="common-input" onfocus="this.placeholder = ''"
+										onblur="this.placeholder = 'Your email address'" required type="email">
+									<button class="button" type="submit">
+										<i class="icofont icofont-paper-plane"></i>
+									</button>
 								</form>
+
 							</div>
 						</div>
 					</div>
