--- a/index.html
+++ b/index.html
@@ -870,7 +870,7 @@
 						</div>
 						<div class="col-lg-3 col-md-6 col-12">
 							<div class="single-footer">
-								<h2>Newsletter</h2>
+								<h2>Enquiry</h2>
 								<p>Stay connected with Paridhi Agencies—reach out for product inquiries, support or partnership opportunities anytime.</p>
 								<form action="thankyou.html" method="get" class="newsletter-inner">
 									<input name="email" placeholder="Your email address" class="common-input" onfocus="this.placeholder = ''"
