added new product page

--- a/index.html
+++ b/index.html
@@ -745,7 +745,7 @@
 
 					<div class="ty-button-group">
 						<a href="index.html" class="ty-btn-outline">Back to Home</a>
-						<a href="products.html" class="ty-btn-filled">Explore Products</a>
+						<a href="product.html" class="ty-btn-filled">Explore Products</a>
 					</div>
 				</div>
 			</div>
