--- a/index.html
+++ b/index.html
@@ -657,7 +657,7 @@
 				<div class="row">
 					<!-- Contact Form -->
 					<div class="col-lg-6 col-md-12 col-12">
-						<form class="form" action="https://formsubmit.co/hotingabu@gmail.com" method="POST">
+						<form class="form" action="https://formsubmit.co/paridhi.amul@gmail.com" method="POST">
 							<input type="hidden" name="_captcha" value="false">
 							<input type="hidden" name="_next" value="thankyou.html">
 							<div class="row">
@@ -697,7 +697,7 @@
 									</div>
 								</div>
 								<div class="col-lg-7 col-md-8 col-12">
-									<p>( We will confirm via text message )</p>
+									<p>( We will get in touch soon )</p>
 								</div>
 							</div>
 						</form>
