enquiry changed to update

--- a/index.html
+++ b/index.html
@@ -862,16 +862,19 @@
 								<h2>Open Hours</h2>
 								<p>We're here to assist you—connect with us during business hours for any product or service inquiries.</p>
 								<ul class="time-sidual">
-									<li class="day">Monday - Fridayp <span>8.00-20.00</span></li>
-									<li class="day">Saturday <span>9.00-18.30</span></li>
-									<li class="day">Monday - Thusday <span>9.00-15.00</span></li>
+									<li class="day">Monday - Friday <span>8.00-20.00</span></li>
+									<li class="day">Saturday <span>80-20</span></li>
+									<li class="day">Sunday <span>9.00-18.30</span></li>
 								</ul>
 							</div>
 						</div>
+
+				<!-- UPDATES SECTION -->
 						<div class="col-lg-3 col-md-6 col-12">
 							<div class="single-footer">
-								<h2>Enquiry</h2>
-								<p>Stay connected with Paridhi Agencies—reach out for product inquiries, support or partnership opportunities anytime.</p>
+								<h2>Updates</h2>
+								<p>Subscribe to receive the latest product updates, stock availability, and important notifications from Paridhi
+									Agencies.</p>
 								<form action="thankyou.html" method="get" class="newsletter-inner">
 									<input name="email" placeholder="Your email address" class="common-input" onfocus="this.placeholder = ''"
 										onblur="this.placeholder = 'Your email address'" required type="email">
@@ -879,9 +882,9 @@
 										<i class="icofont icofont-paper-plane"></i>
 									</button>
 								</form>
-
 							</div>
 						</div>
+
 					</div>
 				</div>
 			</div>
