added PLUS sign to counter

--- a/index.html
+++ b/index.html
@@ -373,7 +373,9 @@
 						<div class="single-fun">
 							<i class="icofont icofont-home"></i>
 							<div class="content">
-								<span class="counter">1200</span>
+								<div style="display: inline-flex; align-items: baseline; gap: 2px;">
+								<span class="counter">1200</span><span>+</span>
+								</div>
 								<p>Hospitals & Labs Supplied</p>
 							</div>
 						</div>
@@ -384,7 +386,9 @@
 						<div class="single-fun">
 							<i class="icofont icofont-user-alt-3"></i>
 							<div class="content">
-								<span class="counter">250</span> 
+								<div style="display: inline-flex; align-items: baseline; gap: 2px;">
+								<span class="counter">250</span> <span>+</span>
+								</div>
 								<p>Top Healthcare Brands Stocked</p>
 							</div>
 						</div>
@@ -408,7 +412,9 @@
 						<div class="single-fun">
 							<i class="icofont icofont-table"></i>
 							<div class="content">
-								<span class="counter">30 </span>
+									<div style="display: inline-flex; align-items: baseline; gap: 2px;">
+										<span class="counter">30 </span><span>+</span>
+									</div>
 								<p>Years of <br>Experience</p>
 							</div>
 						</div>
