--- a/product.html
+++ b/product.html
@@ -2,7 +2,11 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+      	<!-- Title -->
     <title>Our Products - Paridhi Agencies</title>
+		<!-- Favicon -->
+        <link rel="icon" href="img/favicon copy.ico" type="image/png">
+		
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- External Styles (use your existing CSS if needed) -->
     <link rel="stylesheet" href="css/bootstrap.min.css">
@@ -190,7 +194,9 @@
         </div>
 
         <div class="product-card">
-            <div class="product-img">Image Placeholder</div>
+            <div class="product-img">
+                <img src="img/merilortho1.jpg" alt="joint-replacement" srcset="">
+            </div>
             <div class="product-content">
                 <h3>Meril Ortho (Joint Replacement)</h3>
                 <p>Precision orthopedic implants and systems for joint replacement surgeries by Meril.</p>
@@ -198,7 +204,9 @@
         </div>
 
         <div class="product-card">
-            <div class="product-img">Image Placeholder</div>
+            <div class="product-img">
+                <img src="img/primweradrapes.jpg" alt="primweradrapes" srcset="">
+            </div>
             <div class="product-content">
                 <h3>Primewear (Drapes)</h3>
                 <p>High-quality sterile drapes and disposable protective sheets for operating rooms.</p>
@@ -206,7 +214,9 @@
         </div>
 
         <div class="product-card">
-            <div class="product-img">Image Placeholder</div>
+            <div class="product-img">
+                     <img src="img/MedicareHygine.jpg" alt="MedicareHygine" srcset="">
+            </div>
             <div class="product-content">
                 <h3>Medicare Hygine</h3>
                 <p>Infection control and hygiene products for hospitals and laboratories.</p>
@@ -214,7 +224,9 @@
         </div>
 
         <div class="product-card">
-            <div class="product-img">Image Placeholder</div>
+            <div class="product-img">
+                 <img src="img/X-Ray Developer & Fixer.jpg" alt="X-Ray Developer & Fixer" srcset="">
+            </div>
             <div class="product-content">
                 <h3>X-Ray Developer & Fixer</h3>
                 <p>Essential chemicals for X-ray film processing and radiography imaging.</p>
