babyhugDiaper-product page

--- a/product.html
+++ b/product.html
@@ -234,7 +234,9 @@
         </div>
 
         <div class="product-card">
-            <div class="product-img">Image Placeholder</div>
+            <div class="product-img">
+                <img src="img/X-ray films.jpg" alt="X-ray films" srcset="">
+            </div>
             <div class="product-content">
                 <h3>X-Ray Film Laser</h3>
                 <p>Medical-grade laser films used in digital radiography and diagnostic imaging.</p>
@@ -242,7 +244,9 @@
         </div>
 
         <div class="product-card">
-            <div class="product-img">Image Placeholder</div>
+            <div class="product-img">
+                <img src="img/Bennet Pharma.jpg" alt="Bennet Pharma" srcset="">
+            </div>
             <div class="product-content">
                 <h3>Bennet Pharma</h3>
                 <p>Generic and branded pharmaceuticals for hospitals and retail distribution.</p>
@@ -250,7 +254,9 @@
         </div>
 
         <div class="product-card">
-            <div class="product-img">Image Placeholder</div>
+            <div class="product-img">
+                <img src="img/Babyhug diaper.jpg" alt="Babyhug diaper" srcset="">
+            </div>
             <div class="product-content">
                 <h3>Babyhug Diaper</h3>
                 <p>Soft, absorbent diapers designed for infant care and comfort.</p>
